2006-08-01  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/recentchooser.ccg:
	* gtk/src/recentchooser.hg:
	* gtk/src/recentinfo.ccg:
	* gtk/src/recentinfo.hg:
	* gtk/src/recentmanager.ccg:
	* gtk/src/recentmanager.hg: Move RecentInfoTraits into recentinfo.hg, and 
	use it for RecentManager::get_items() as well as the existing 
	RecentChooser::get_items().

2006-07-30  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/recentchooser.ccg:
	* gtk/src/recentchooser.hg:
	* gtk/src/recentinfo.hg:
	* gtk/src/recentmanager.hg: Use RecentInfo via RefPtr always.
	* tools/m4/convert_gtk.m4:

2006-07-27  Murray Cumming  <murrayc@murrayc.com>

	* docs/index.html: Linked to the wiki page.

20c06-07-26  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/recentinfo.hg: Use _CLASS_OPAQUE_REFCOUNTED instead of 
	_CLASS_OPAQUE_COPYABLE(), because this struct has ref/unref instead 
	of copy/free. This causes the reference() and unreference() methods 
	to generated.
	* examples/book/printing/advanced/printformoperation.cc: 
	Wrapping C libraries section: Correct the _CLASS_OPAQUE_COPYABLE 
	section and mention _CLASS_OPAQUE_REFCOUNTED.

2006-07-25  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* examples/book/recent_files/examplewindow.cc:
	* examples/book/recent_files/examplewindow.h: Fix recent files example so
	that it actually pops up a dialog when you select the recent files menu
	item.  Also added _mnemonics to menu items for easy keyboard navigation :)

2006-07-25  Murray Cumming  <murrayc@murrayc.com>

	* examples/book/printing/advanced/printformoperation.cc:
	* examples/book/printing/advanced/printformoperation.h: Uncomment out 
	the on_preview() override again, and add an if that shows that m_refLayout is 
	null, because on on_begin_print() has never been called.

2006-07-25  Murray Cumming  <murrayc@murrayc.com>

	* examples/book/printing/advanced/examplewindow.cc:
	* examples/book/printing/advanced/printformoperation.cc: