@@ -5790,14 +5790,27 @@ if (info)
     </para>
     <sect3>
       <title>Simple RecentChooserWidget example</title>
-      <para>Shown below is a simple example of how to use the
-        <classname>RecentChooserDialog</classname> class in a program.</para>
-      <!-- add screenshot eventually
+      <para>
+        Shown below is a simple example of how to use the
+        <classname>RecentChooserDialog</classname> class in a program.  This
+        simple program has a menubar with a "Recent Files Dialog" menu item.
+        When you select this menu item, a dialog pops up showing the list of
+        recently used files.
+      </para>
+      <note>
+        If this is the first time you're using a program that uses the Recent
+        Files framework, the dialog may be empty at first.  Otherwise it should
+        show the list of recently used documents registered by other
+        applications.
+      </note>
+      <para>
+        After selecting the <guimenuitem>Recent Files Dialog</guimenuitem> menu
+        item, you should see something similar to the following window.
+      </para>
       <screenshot>
           <graphic format="PNG"
-              fileref="&url_figures_base;recent_files.png"/>
+              fileref="&url_figures_base;recentchooserdialog.png"/>
       </screenshot>
-      -->
       <para><ulink url="&url_examples_base;recent_files">Source Code</ulink></para>
       <para>
         The constructor for <classname>ExampleWindow</classname> creates the
