@@ -1,3 +1,10 @@
+2006-08-01  Jonathon Jongsma  <jonathon.jongsma@gmail.com>
+
+	* docs/tutorial/figures/Makefile.am:
+	* docs/tutorial/figures/recentchooserdialog.png:
+	* docs/tutorial/gtkmm-tut.xml: added a screenshot of the RecentChooserDialog
+	and a bit of additional explanation to the example
+
 2006-08-01  Murray Cumming  <murrayc@murrayc.com>
 
 	* gtk/src/recentchooser.ccg:
